--- a/app/src/main/res/layout/fragment_main.xml
+++ b/app/src/main/res/layout/fragment_main.xml
@@ -6,7 +6,7 @@
     android:layout_height="match_parent">
 
     <Button
-        android:id="@+id/repo"
+        android:id="@+id/repoBtn"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="@string/repo"
