--- a/app/src/main/res/layout/fragment_repo.xml
+++ b/app/src/main/res/layout/fragment_repo.xml
@@ -9,6 +9,7 @@
         android:id="@+id/repoText"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:contentDescription="@string/repo"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 </androidx.constraintlayout.widget.ConstraintLayout>
