Add wanandroid api

--- a/app/src/main/res/layout/fragment_article.xml
+++ b/app/src/main/res/layout/fragment_article.xml
@@ -5,10 +5,10 @@
     android:layout_height="match_parent">
 
     <com.frank.han.widget.HTextView
-        android:id="@+id/repoTextView"
+        android:id="@+id/articleTextView"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:contentDescription="@string/repo"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
+
 </androidx.constraintlayout.widget.ConstraintLayout>
