--- a/app/src/main/res/layout/fragment_main.xml
+++ b/app/src/main/res/layout/fragment_main.xml
@@ -1,6 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <com.frank.han.widget.HResourceView xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/container"
     android:layout_width="match_parent"
     android:layout_height="match_parent">
@@ -25,7 +26,7 @@
         android:layout_marginTop="10dp"
         android:text="@string/repo"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/userBtn" />
+        app:layout_constraintTop_toBottomOf="@id/userBtn" />
 
     <com.frank.han.widget.HButton
         android:id="@+id/articleBtn"
@@ -36,7 +37,18 @@
         android:layout_marginTop="10dp"
         android:text="@string/article"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/repoBtn" />
+        app:layout_constraintTop_toBottomOf="@id/repoBtn" />
+
+    <com.frank.han.widget.HButton
+        android:id="@+id/articleDetailBtn"
+        style="@style/HButton"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="10dp"
+        android:layout_marginTop="10dp"
+        android:text="@string/article_detail"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@id/articleBtn" />
 
     <com.frank.han.widget.HTextView
         android:id="@+id/counterText"
@@ -45,6 +57,7 @@
         android:layout_marginStart="10dp"
         android:layout_marginTop="10dp"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@id/articleBtn"
-        app:layout_goneMarginStart="10dp" />
+        app:layout_constraintTop_toBottomOf="@id/articleDetailBtn"
+        app:layout_goneMarginStart="10dp"
+        tools:text="User button was clicked 3 times"/>
 </com.frank.han.widget.HResourceView>
